--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 	<body>
 		<h1>Code with Mosh - JavaScript Part 2</h1>
 		<h2>Object Oriented Programming</h2>
+		<ul>
+			<li><a href="/objects/index.html">Objects</a></li>
+			<li><a href="/prototypes/index.html">Prototypes</a></li>
+		</ul>
 	</body>
 </html>
