--- a/objects/index.html
+++ b/objects/index.html
@@ -84,6 +84,7 @@
 				no longer active
 			</li>
 		</ol>
+		<a href="/">Back to Index</a>
 		<script src="/objects/index.js"></script>
 	</body>
 </html>
